# AlphaTrack

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/models/: stock_models.py
app/routers/: api.py  ui.py
app/services/: prediction_service.py  stock_service.py
app/static/css/: styles.css
app/static/js/: chart.js  ui_interactions.js
app/templates/: base.html  index.html
app/templates/components/: chart.html  sidebar.html  stats_cards.html
data/: companies.json  sample_data.json
tests/: test_api.py  test_stock_service.py
