[project]
name = "jarnox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.35.0",
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "scikit-learn>=1.7.1",
    "pandas>=2.3.1",
    "numpy>=2.3.2",
]
